Integrate real Gemini AI processing in background.js, replacing mock responses with API calls for clothing detection. Add error handling and fallback mechanisms. Introduce debug and test scripts for extension functionality verification. Update test-extension.html for improved user instructions and expected results display. Enhance popup.js to show detailed processing results and notifications.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -64,6 +64,14 @@
         </div>
       </div>
 
+      <!-- Latest Results -->
+      <div class="latest-results" id="latest-results" style="display: none;">
+        <h2>Latest Results</h2>
+        <div id="results-content" class="results-content">
+          <!-- Latest processing results will appear here -->
+        </div>
+      </div>
+
       <!-- Recent Try-ons -->
       <div class="recent-tryons">
         <h2>Recent Try-ons</h2>
